--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
   "author": "'Nino kvakhadze'",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mailer": "^0.6.7",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "node": "^21.6.1",
+    "nodemailer": "^6.9.8",
+    "punycode": "^2.3.1",
     "routes": "^2.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "userland": "^0.4.1",
+    "validator": "^13.11.0"
   }
 }
