--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mailer": "^0.6.7",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node": "^21.6.1",
     "nodemailer": "^6.9.8",
     "punycode": "^2.3.1",
     "routes": "^2.1.0",
     "slugify": "^1.6.6",
     "userland": "^0.4.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   }
 }
